# second-brain

./: .gitignore  README.md  SecondBrain.spec  dashboard.md  setup.py  setup.sh
.beads/: last-touched
.claude/: claude.md  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning-v1/: MILESTONE-AUDIT.md  ROADMAP.md  STATE.md
_scripts/: .env.example  README.md  configure.py  daily_digest.py  fix_handler.py  process_inbox.py  schema.py  state.py  weekly_review.py
_templates/: person.md  project.md
apps/: README.md
archive/: README.md
backend/: README.md  dashboard.md  pyproject.toml  setup.sh
backend/_scripts/: .env.example  .gitignore  SKILL.md  daily_digest.py  domain_classifier.py  file_writer.py  health_check.py  menu_bar_app.py  message_classifier.py  notifications.py  ollama_client.py  process_inbox.py  requirements.txt  setup_wizard.py  slack_client.py  state.py  status_handler.py  vault_scanner.py  weekly_review.py  wikilinks.py
backend/_scripts/.state/: .last_processed_ts
backend/_templates/: idea.md  person.md  task.md
backend/tests/: __init__.py  test_domain_classifier.py  test_file_writer.py  test_integration.py  test_message_classifier.py  test_notifications.py  test_ollama_client.py  test_process_inbox.py  test_schema.py  test_setup_wizard.py  test_slack_client.py  test_state.py  test_status_handler.py  test_vault_scanner.py  test_veritas_client.py
daily/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING-KNOWLEDGE.md  GUIDE.md  INSTALLATION.md  LEGACY-STATUS.md  README.md  (+4 more)
(+387 files in other folders)
