[project]
name = "second-brain"
version = "0.1.0"
description = "Personal knowledge capture system that automatically classifies thoughts from Slack and stores them in Obsidian"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "ollama>=0.4.0",
    "rumps>=0.4.0",
    "py2app>=0.28.9",
    "setuptools<81",
    "pyinstaller>=6.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["_scripts"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring real external APIs (deselect with '-m \"not integration\"')",
]
